--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+.banner {
+    background: transparent;
+}
+
+.banner h1 {
+    letter-spacing: 4px;
+    font-weight: bold;
+}
+
+.main p:nth-child(1) {
+    margin-top: 1rem;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+button#dropdownMenuButton {
+    width: 100%;
+    background-color: transparent;
+    color: #333;
+    margin-bottom: 2rem;
 }
 
 .banner {
@@ -13,11 +35,34 @@
     color: white;
 }
 
-.breadcrumb {
-    background-color: transparent;
+ol.breadcrumb {
+    color: whitesmoke;
+    background: none;
+}
+
+.breadcrumb>li a {
     color: whitesmoke;
 }
 
-.breadcrumb>ol>a {
-    color: whitesmoke;
+li.breadcrumb-item.active {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.products .product {
+    border: none;
+}
+
+.product h5 {
+    font-weight: 1000;
+    color: #333;
+}
+
+footer {
+    background: #333;
+    color: rgba(255, 255, 255, 0.7);
+    padding-top: 2rem;
+}
+
+footer .col-12 {
+    margin-bottom: 1rem;
 }
