--- a/css/style.css
+++ b/css/style.css
@@ -125,18 +125,35 @@ li.breadcrumb-item.active {
     color: #333;
 }
 
-.product .card-img-top {
+.product .product-img {
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+    position: relative;
 }
 
-.product .card-img-top:after {
-    content: "Read this -";
-    background-color: yellow;
-    color: red;
-    font-weight: bold;
+.btn-detail {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.product .product-img::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    background-color: rgba(249, 191, 15, 0.3);
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.product:hover .product-img::before {
+    opacity: 1;
 }
 
 footer {
