--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,17 @@
     font-size: 14px;
 }
 
+@font-face {
+    font-family: Awesome;
+    src: url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-regular-400.woff);
+}
+
+.menu {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #F6F6F6;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.3);
+}
+
 .btn-primary {
     background-color: #333;
     color: white;
@@ -39,7 +50,7 @@ body {
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.nav-item:hover a {
+.nav-item:hover>a {
     color: #F9BF0F;
 }
 
@@ -67,10 +78,14 @@ body {
 
 .dropdown-content a {
     padding: 10px;
-    color: white;
+}
+
+.dropdown-content>a:hover {
+    color: #F9BF0F;
 }
 
 .banner {
+    margin-top: 100px;
     background: transparent;
 }
 
@@ -138,7 +153,10 @@ li.breadcrumb-item.active {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: 0.3s;
 }
+
 
 .product .product-img::before {
     position: absolute;
@@ -152,9 +170,11 @@ li.breadcrumb-item.active {
     transition: 0.3s;
 }
 
-.product:hover .product-img::before {
+.product:hover .product-img::before,
+.product:hover .btn-detail {
     opacity: 1;
 }
+
 
 footer {
     background: #333;
@@ -176,6 +196,17 @@ footer i {
     margin-right: 1rem;
 }
 
+/* css-lien-he */
+
+input.empty {
+    font-family: Awesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+}
+
+
+
 /* css-desktop */
 @media screen and (min-width: 768px) {
     .navbar .nav-item {
@@ -190,5 +221,12 @@ footer i {
     .sort {
         width: 30%;
         margin-left: auto;
+    }
+
+    .menu {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1;
     }
 }
